simple part af the project finished

--- a/frontend/src/app/features/clients/components/client-dialog/client-dialog.component.html
+++ b/frontend/src/app/features/clients/components/client-dialog/client-dialog.component.html
@@ -12,7 +12,7 @@
       
       <div class="form-group">
         <label for="nom">Name</label>
-        <input type="text" id="nom" [(ngModel)]="client.nom" placeholder="Enter client name">
+        <input type="text" id="nom" appTextFormatter [(ngModel)]="client.nom" placeholder="Enter client name">
       </div>
       
       <div class="form-group">
