--- a/frontend/src/app/features/unites/components/unite-dialog/unite-dialog.component.html
+++ b/frontend/src/app/features/unites/components/unite-dialog/unite-dialog.component.html
@@ -12,12 +12,12 @@
       
       <div class="form-group">
         <label for="nom">Name</label>
-        <input type="text" id="nom" [(ngModel)]="unite.nom" placeholder="Enter unite name">
+        <input type="text" id="nom" appTextFormatter [(ngModel)]="unite.nom" placeholder="Enter unite name">
       </div>
       
       <div class="form-group">
         <label for="abreviation">abreviation</label>
-        <input type="text" id="abreviation" [(ngModel)]="unite.abreviation" placeholder="Enter abreviation">
+        <input type="text" id="abreviation"  [(ngModel)]="unite.abreviation" placeholder="Enter abreviation">
       </div>
     </div>
     
