--- a/frontend/src/app/features/articles/components/article-dialog/article-dialog.component.html
+++ b/frontend/src/app/features/articles/components/article-dialog/article-dialog.component.html
@@ -16,12 +16,12 @@
       
       <div class="form-group">
         <label for="reference">Référence</label>
-        <input type="text" id="reference" [(ngModel)]="article.reference" placeholder="Enter article reference">
+        <input type="text" appTextFormatter id="reference" [(ngModel)]="article.reference"  placeholder="Enter article reference">
       </div>
       
-      <div class="form-group">
+      <div class="form-group"> 
         <label for="designation">Désignation</label>
-        <input type="text" id="designation" [(ngModel)]="article.designation" placeholder="Enter article designation">
+        <input type="text" id="designation" [(ngModel)]="article.designation" appTextFormatter placeholder="Enter article designation">
       </div>
       
       <div class="form-group">
@@ -30,9 +30,9 @@
       </div>
 
       <div class="form-group">
-        <label for="stockMin">Stock minimum</label>
-        <input type="number" id="stockMin" [(ngModel)]="article.stock_Minimum" placeholder="Enter minimum stock">
-      </div>
+            <label for="stockMin">Stock minimum</label>
+            <input type="number" id="stockMin" [(ngModel)]="article.stock_Minimum" placeholder="Enter minimum stock">
+        </div>
             
       <div class="form-group">
         <label for="unite">Unité</label>
