--- a/frontend/src/app/features/familles/components/famille-dialog/famille-dialog.component.html
+++ b/frontend/src/app/features/familles/components/famille-dialog/famille-dialog.component.html
@@ -12,7 +12,7 @@
       
       <div class="form-group">
         <label for="nom">Name</label>
-        <input type="text" id="nom" [(ngModel)]="famille.nom" placeholder="Enter famille name">
+        <input type="text" id="nom" appTextFormatter [(ngModel)]="famille.nom" placeholder="Enter famille name">
       </div>
       
       <div class="form-group">
