implementing Crd function for Users , and trying to fix it's update problems

--- a/frontend/src/app/features/livraisons/components/livraison-dialog/livraison-dialog.component.html
+++ b/frontend/src/app/features/livraisons/components/livraison-dialog/livraison-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-overlay" *ngIf="showDialog">
   <div class="dialog-container">
     <div class="dialog-header">
-      <h2>{{ editMode ? 'Edit Livraison' : 'Add New Livraison' }}</h2>
+      <h2>{{ editMode ? 'Modifier Livraison' : 'Ajoute Livraison' }}</h2>
       <button class="close-button" (click)="close()">&times;</button>
     </div>
     
