--- a/frontend/src/app/features/livraisons/components/livraison-list/livraison-list.component.css
+++ b/frontend/src/app/features/livraisons/components/livraison-list/livraison-list.component.css
@@ -99,3 +99,10 @@ h1 {
   background-color: #f9f9f9;
   border-radius: 5px;
 }
+.add-button:disabled,
+.edit-btn:disabled:disabled,
+.delete-btn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  background-color: #666;
+}
