--- a/frontend/src/app/features/unites/components/unite-dialog/unite-dialog.component.html
+++ b/frontend/src/app/features/unites/components/unite-dialog/unite-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-overlay" *ngIf="showDialog" (click)="close()">
   <div class="dialog" (click)="$event.stopPropagation()">
     <div class="dialog-header">
-      <h2>{{ editMode ? 'Edit Unité' : 'Add New Unité' }}</h2>
+      <h2>{{ editMode ? 'Modifier Unité' : 'Ajouter Unité' }}</h2>
       <button class="close-button" (click)="close()">×</button>
     </div>
     
@@ -11,20 +11,20 @@
       </div>
       
       <div class="form-group">
-        <label for="nom">Name</label>
-        <input type="text" id="nom" appTextFormatter [(ngModel)]="unite.nom" placeholder="Enter unite name">
+        <label for="nom">Nom</label>
+        <input type="text" id="nom" appTextFormatter [(ngModel)]="unite.nom" placeholder="Entrez le nom de l'unité">
       </div>
       
       <div class="form-group">
-        <label for="abreviation">abreviation</label>
-        <input type="text" id="abreviation"  [(ngModel)]="unite.abreviation" placeholder="Enter abreviation">
+        <label for="abreviation">Abreviation</label>
+        <input type="text" id="abreviation"  [(ngModel)]="unite.abreviation" placeholder="Entrez l'abreviation">
       </div>
     </div>
     
     <div class="dialog-footer">
       <button class="cancel-button" (click)="close()">Cancel</button>
       <button class="submit-button" (click)="submit()">
-        {{ editMode ? 'Update Unité' : 'Add Unité' }}
+        {{ editMode ? 'Modifier Unité' : 'Ajouter Unité' }}
       </button>
     </div>
   </div>
