--- a/frontend/src/app/features/unites/components/unite-list/unite-list.component.css
+++ b/frontend/src/app/features/unites/components/unite-list/unite-list.component.css
@@ -98,3 +98,10 @@
   background-color: #f9f9f9;
   border-radius: 5px;
 }
+.add-button:disabled,
+.edit-btn:disabled:disabled,
+.delete-btn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  background-color: #666;
+}
